# halide-wasm-game-of-life

./: .gitignore  CMakeLists.txt  _headers  asset-manifest.json  gol.js  gol.wasm  gol_sdl.wasm  gol_sdl.worker.js  index.html  run_test.sh  wasm.cc  wasm_sdl.cc
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pages.yml
demo/: package.json
demo/public/: gol.js  gol.wasm  gol.worker.js  gol_sdl.js  gol_sdl.wasm  index.html  sdl.html
demo/src/: App.css  App.tsx
halide_gen/: CMakeLists.txt  gameoflife_gen.cc  halide_perf.cc  halide_test.cc  visualize_gen.cc
static/css/: main.5ee9b291.chunk.css  main.5ee9b291.chunk.css.map
static/js/: 2.de4bd5d7.chunk.js  2.de4bd5d7.chunk.js.map  3.37020fc9.chunk.js  3.37020fc9.chunk.js.map  main.21aa6f67.chunk.js  main.21aa6f67.chunk.js.map  main.b862cda8.chunk.js  main.b862cda8.chunk.js.map  runtime-main.3f40d5b8.js  runtime-main.3f40d5b8.js.map  runtime-main.768ed1c9.js  runtime-main.768ed1c9.js.map
